--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,12 +1,12 @@
 doctype html
 html
   head
-    title= title
+    title CH Building Intelligence Database
     
-    script(src='http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js')
+    script(src='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.js')
     
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
-    link(rel='stylesheet',  href='https://unpkg.com/leaflet@1.1.0/dist/leaflet.css', integrity='sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw==', crossorigin='')
+    link(rel='stylesheet', href='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+  body    
     block content
