--- a/views/building.pug
+++ b/views/building.pug
@@ -33,23 +33,21 @@ block content
             span.badge= b.fc_count
           li.list-group-item # of Complaints
             span.badge= b.comp_count
-          li.list-group-item Years from the Last Case 
-            span.badge= b.last_case
 
     div.col-md-4
       div.panel.panel-default
         div.panel-heading
-          h3.panel-title Land Use
-            span.label.label-primary.pull-right Code #{b.land_use}
+          h3.panel-title Floor Space
+            span.label.label-primary.pull-right Land Use Code #{b.land_use}
         table.table
           tr
-            td Commercial Floor Space
+            td Commercial
             td #{b.tot_com_sq} sq ft
           tr
-            td Residential Floor Space
+            td Residential
             td #{b.tot_res_sq} sq ft
           tr
-            td Total Floor Space
+            td Total
             td #{b.total_sqft} sq ft
 
     div.col-md-4
@@ -84,7 +82,8 @@ block content
             each val in policecalls
               tr
                 - var d = new Date(val.enddate)
-                td= d.toDateString()
+                - var dateString = d.toDateString()
+                td= dateString.slice(4)
                 td= val.offtext
     div.col-md-6
       div.panel.panel-default
