--- a/views/buildings.pug
+++ b/views/buildings.pug
@@ -5,7 +5,7 @@ block content
   nav.navbar.navbar-default
     div.container-fluid
       div.navbar-header
-        a.navbar-brand(href='/buildings') CH Building Intelligence Database
+        a.navbar-brand(href='/buildings') Cleveland Heights Building Intelligence Database
   
   div.container-fill
     div#building-id
