--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,9 +4,11 @@ html
     title CH Building Intelligence Database
     
     script(src='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.js')
+    script(src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.min.js')
     
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
     link(rel='stylesheet', href='https://api.mapbox.com/mapbox-gl-js/v0.39.1/mapbox-gl.css')
+    link(rel='stylesheet', href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.1.1/mapbox-gl-geocoder.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body    
     block content
